20011103
 - (tim) [ contrib/caldera/openssh.spec contrib/caldera/sshd.init] Updates 
   from Raymund Will <ray@caldera.de>
   [acconfig.h configure.in] Clean up login checks.
   Problem reported by Jim Knoble <jmknoble@pobox.com>

20011101
 - (djm) Compat define for OpenSSL < 0.9.6 (No OPENSSL_free)

20011031
 - (djm) Unsmoke drugs: config files should be noreplace.

20011030
 - (djm) Redhat RPM spec: remove noreplace from config files, allow IPv6 
   by default (can force IPv4 using --define "noipv6 1")

20011029
 - (tim) [TODO defines.h loginrec.c] Change the references to configure.in
   to configure.ac

20011028
 - (djm) Avoid bug in Solaris PAM libs
 - (djm) Disconnect if no tty and PAM reports password expired
 - (djm) Fix for PAM password changes being echoed (from stevesk)
 - (stevesk) Fix compile problem with PAM password change fix
 - (stevesk) README: zlib location is http://www.gzip.org/zlib/

20011027
 - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
   Patch by Robert Dahlem <Robert.Dahlem@siemens.com>

20011026
 - (bal) Set the correct current time in login_utmp_only().  Patch by
   Wayne Davison <wayned@users.sourceforge.net>
 - (tim) [scard/Makefile.in] Fix install: when building outside of source
	 tree and using --src=/full_path/to/openssh
	 Patch by Mark D. Baushke <mdb@juniper.net>

20011025
 - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
   by todd@
 - (tim) [configure.ac] Give path given in --with-xxx= for pcre,zlib, and
	 tcp-wrappers precedence over system libraries and includes.
	 Report from Dave Dykstra <dwd@bell-labs.com>

20011024
 - (bal) Should be 3.0p1 not 3.0p2.  Corrected version.h already.
 - (tim) configure.in -> configure.ac

20011023
 - (bal) Updated version to 3.0p1 in preparing for release.
 - (bal) Added 'PAM_TTY_KLUDGE' to Solaris platform.
 - (tim) [configure.in] Fix test for broken dirname. Based on patch from
	 Dave Dykstra <dwd@bell-labs.com>. Remove un-needed test for zlib.h.